--- a/index.html
+++ b/index.html
@@ -20,38 +20,40 @@
 
     header {
       padding: 40px 60px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
     }
 
     header h1 {
       font-size: 20px;
       font-weight: normal;
       letter-spacing: 1px;
+      margin: 0;
+    }
+
+    nav {
+      margin-top: 30px;
     }
 
     nav a {
-      margin-left: 30px;
+      margin-right: 30px;
       font-size: 14px;
     }
 
     section {
-      max-width: 1100px;
+      max-width: 900px;
       margin: 140px auto;
       padding: 0 60px;
     }
 
     h2 {
-      font-size: 34px;
+      font-size: 32px;
       font-weight: normal;
       margin-bottom: 40px;
     }
 
     p {
-      max-width: 600px;
-      line-height: 1.7;
       font-size: 16px;
+      line-height: 1.8;
+      max-width: 600px;
     }
 
     .projects {
@@ -79,6 +81,7 @@
 
 <header>
   <h1>Yasmin Reis</h1>
+
   <nav>
     <a href="#follow">Follow</a>
     <a href="#architecture">Architecture</a>
@@ -87,11 +90,19 @@
   </nav>
 </header>
 
+<section>
+  <p>
+    I work with interior architecture focusing on spatial clarity, natural
+    materials and thoughtful design. My process values manual drawing,
+    proportion and the balance between function and atmosphere.
+  </p>
+</section>
+
 <section id="follow">
   <h2>Follow</h2>
   <p>
-    Email: flaviayasmindosreisamorin9@gmail.com<br><br>
-    LinkedIn: 
+    Gmail: flaviayasmindosreisamorin9@gmail.com<br><br>
+    LinkedIn:
     <a href="https://www.linkedin.com/in/yasmin-reis-b76496340/" target="_blank">
       linkedin.com/in/yasmin-reis
     </a>
@@ -101,9 +112,9 @@
 <section id="architecture">
   <h2>Architecture</h2>
   <p>
-    My work is focused on spatial clarity, natural materials and thoughtful
-    design solutions. I explore balance between function, aesthetics and
-    handcrafted details, creating environments that feel intentional and timeless.
+    My architectural language is rooted in simplicity, proportion and
+    material honesty. I explore spatial flow and custom solutions to create
+    environments that feel intentional, calm and timeless.
   </p>
 </section>
 
@@ -143,14 +154,4 @@
 <section id="creative">
   <h2>Creative</h2>
   <p>
-    Conceptual studies, hand sketches, spatial ideas and experimental layouts
-    developed as part of an ongoing creative process.
-  </p>
-</section>
-
-<footer>
-  © 2025 Yasmin Reis
-</footer>
-
-</body>
-</html>
+    Conceptual studies, sketches, spatial experiments and idea
